some FTP fixes:   * send the SIZE command only if we are in binary mode   * close the command channel before reading the status after downloading     a file or reading a directory
git-svn-id: https://tinyproxy-ex.svn.sourceforge.net/svnroot/tinyproxy-ex@72 83a598aa-e702-4329-b5a2-d7f1006a0cbb

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,4 +1,13 @@
-Just some ideas
+Just some (unordered) ideas
 
  * SSL interception
   - check polarssl, axtls etc.pp.
+
+ * better FTP support
+  - OK, FTP seems to work most of the time, but it should revised
+
+ * Add support for statistics via RRD files.
+  - It would be usefull to have statistics available to generate some nice
+    usage graphs via rrdtool.
+  - I have to check how to do this because librrd.so has a bunch of
+    dependencies. Maybe I have to implement my own small rrd library.
